label cotar ao lado do botao

--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -8,7 +8,10 @@
           Cotacao
         </span>
         <span style="float: right">
-          <a><mat-icon (click)="consultaCotacao()" class="mouse-pointer">search</mat-icon></a>
+          <div (click)="consultaCotacao()" class="mouse-pointer" style="font-size: initial">
+            <span style="vertical-align: super"> Cotar </span>
+            <a><mat-icon>search</mat-icon></a>
+          </div>
         </span>
       </mat-card-title>
       <mat-card-content>
