fonte branca em produto.component.html

--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -18,60 +18,60 @@
         <mat-table style="width: 5000px" #sortProduto="matSort" [dataSource]="dataSourceProduto" matSort>
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.id}} </mat-cell>
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.id}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="nome" sticky>
             <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.nome}} </mat-cell>
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.nome}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="abrangencia">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Abrangencia </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.abrangencia}} </mat-cell>
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.abrangencia}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="operadora">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.operadora.nome}} </mat-cell>
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.operadora.nome}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="reembolso">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Reembolso </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.reembolso | currency:'BRL':'symbol':'0.2'}} </mat-cell>
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer"> {{produto.reembolso | currency:'BRL':'symbol':'0.2'}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="valorProntoSocorro">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Pronto Socorro </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               {{produto.coparticipacao.percentualProntoSocorro}}% | {{produto.coparticipacao.valorProntoSocorro}}
             </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="valorConsulta">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Consulta </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               {{produto.coparticipacao.percentualConsulta}}% | {{produto.coparticipacao.valorConsulta}}
             </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="valorExameSimples">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Exame Simples </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               {{produto.coparticipacao.percentualExameSimples}}% | {{produto.coparticipacao.valorExameSimples}}
             </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="valorExameEspecial">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Exame Especial </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               {{produto.coparticipacao.percentualExameEspecial}}% | {{produto.coparticipacao.valorExameEspecial}}
             </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="valorInternacao">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Internacao </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               {{produto.coparticipacao.percentualInternacao}}% | {{produto.coparticipacao.valorInternacao}}
             </mat-cell>
           </ng-container>
@@ -83,14 +83,14 @@
                 <div>{{laboratorio.nome}}</div>
               </div>
             </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               <mat-checkbox [disabled]="true" [ngModel]="verificaSeLaboratorioSelecionado(produto, laboratorio)"></mat-checkbox>
             </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="totalLaboratorios">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Laboratorios </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               {{produto.laboratorios.length}}
             </mat-cell>
 
@@ -101,7 +101,7 @@
                 <div>{{hospital.nome}}</div>
               </div>
             </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               <mat-checkbox [disabled]="true" [ngModel]="verificaSeHospitalSelecionado(produto, hospital)"></mat-checkbox>
             </mat-cell>
           </ng-container>
@@ -109,7 +109,7 @@
 
           <ng-container matColumnDef="totalHospitais">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Hospitais </mat-header-cell>
-            <mat-cell *matCellDef="let produto" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
+            <mat-cell *matCellDef="let produto" [style.color]="'white'" [style.background-color]="produto.operadora.cor" (click)="selecionaProduto(produto)" class="mouse-pointer">
               {{produto.hospitais.length}}
             </mat-cell>
           </ng-container>
